# Cameras_GRIn

./: .gitmodules  README.md
astra_calibrada/: CMakeLists.txt  package.xml
astra_calibrada/cfg/: params.cfg
astra_calibrada/launch/: lancar_sistema.launch  record.launch
astra_calibrada/src/: astra_calibrada.cpp  astra_calibrada.cpp.autosave  astra_calibrada_felipe.cpp  calibrar_astra_online.cpp  zed_e_astra.cpp.autosave
duo3d_driver/launch/: duo3d_camera.launch  duo3d_depth.launch
duo3d_slam_pkg/: CMakeLists.txt  package.xml  senha.txt
duo3d_slam_pkg/OrbSLAM2/launch/: duo3d.launch  wally.launch
duo3d_slam_pkg/OrbSLAM2/yaml/: duo3d.yaml  kitti.yaml
duo3d_slam_pkg/calib/: duo3d.yaml  duo3d_left.yaml  duo3d_right.yaml  stereo_left.yaml  stereo_right.yaml
duo3d_slam_pkg/config/: avaliar_odom_vis.rviz  avaliar_odom_viso_vis.rviz  orbslam2_vis.rviz  stereo_vis.rviz  viso2_vis.rviz
duo3d_slam_pkg/launch/: camera_e_groundtruth.launch  orbslam2.launch  playback.launch  record.launch  rtabmap.launch  viso2.launch
duo3d_slam_pkg/src/: acumular_viso2.cpp  republish_cam_info.cpp  sync_odom.cpp  sync_tf.cpp
handset_gui/: CMakeLists.txt  mainpage.dox  package.xml
handset_gui/include/handset_gui/: cloud_work.hpp  main_window.hpp  mesh.hpp  qnode.hpp  registra_nuvem.hpp  registra_nuvem.hpp.qaMzOb
handset_gui/launch/: lancar_cameras.launch  lancar_gui.launch  record.launch
handset_gui/resources/: acumulada_ajustada.rviz  filtrando.rviz  fonte.rviz  fonteoff.rviz  inst.rviz  tgt_src.rviz
handset_gui/src/: cloud_work.cpp  cloud_work.cpp.autosave  main.cpp  main_window.cpp  mesh.cpp  qnode.cpp  registra_nuvem.cpp
handset_gui/ui/: main_window.ui
kitti_datasets/: CMakeLists.txt  package.xml
kitti_datasets/Caminhos/: drive00_gt_orb.ply  drive00_gt_viso.ply  drive00_orb.ply  drive00_viso.ply  drive01_gt_orb.ply  drive01_gt_viso.ply  drive01_orb.ply  drive01_viso.ply  drive02_gt_orb.ply  drive02_gt_viso.ply  drive02_orb.ply  drive02_viso.ply  drive03_gt_orb.ply  drive03_gt_viso.ply  drive03_orb.ply  drive03_viso.ply  drive04_gt_orb.ply  drive04_gt_viso.ply  drive04_orb.ply  drive04_viso.ply
kitti_datasets/launch/: avaliar_odom.launch  playback.launch  viso2.launch
kitti_datasets/rviz/: avaliar_odom_orb_vis.rviz  avaliar_odom_viso_vis.rviz
kitti_datasets/src/: sync_dados.cpp  sync_orb_kitti.cpp  sync_tf.cpp
laser2ptc/src/: laser2ptc.cpp
orb_slam_2_ros/orb_slam2/config/: Wally.yaml  ZED1.yaml  ZED2.yaml
orb_slam_2_ros/ros/launch/: ZED.launch
