<?xml version="1.0"?>
<package>
  <name>duo3d_slam_pkg</name>
  <version>0.1.0</version>
  <description>The duo3d_slam_pkg package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="grin@todo.todo">grin</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>Apache 2.0</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp rospy sensor_msgs nav_msgs pcl_ros std_msgs tf tf_conversions geometry_msgs </build_depend>
  <run_depend>roscpp rospy sensor_msgs nav_msgs pcl_ros std_msgs tf tf_conversions geometry_msgs </run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
